<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.jujin8.freeway</groupId>
    <artifactId>freeway-parent</artifactId>
    <version>1.5.0</version>
    <packaging>pom</packaging>

    <name>Freeway Framework</name>
    <description>
        A brand-new, modern, lightweight Java application framework built on JDK 25+.
        Compose-first, no classpath scanning, zero external dependencies for core modules.
    </description>
    <url>https://github.com/dzb/freeway</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>dzb</name>
            <email>dzb2k9@outlook.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/dzb/freeway.git</connection>
        <developerConnection>scm:git:https://github.com/dzb/freeway.git</developerConnection>
        <url>https://github.com/dzb/freeway</url>
    </scm>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <junit.version>6.1.3</junit.version>
        <jmh.version>1.37</jmh.version>
        <slf4j.version>2.0.18</slf4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Freeway internal modules -->
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-commons</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-ioc</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-boot</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-http</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-flow</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.jujin8.freeway</groupId>
                <artifactId>freeway-cloud</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Third-party -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-core</artifactId>
                <version>${jmh.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjdk.jmh</groupId>
                <artifactId>jmh-generator-annprocess</artifactId>
                <version>${jmh.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
            </plugin>
            <!-- Maven Central publishing: source and javadoc JARs -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.11.2</version>
                <configuration>
                    <doclint>none</doclint>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.7</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.11.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <ignorePublishedComponents>true</ignorePublishedComponents>
                    <autoPublish>false</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>freeway-commons</module>
        <module>freeway-ioc</module>
        <module>freeway-boot</module>
        <module>freeway-http</module>
        <module>freeway-db</module>
        <module>freeway-flow</module>
        <module>freeway-cloud</module>
    </modules>
</project>
